2010-02-08 Holger Vogt
 * com_sysinfo.c: 64 bit support enabled
 * terminal.c, terminal.h, cpextern.h, ngsconvert.c, inpgmod.c, ipcsockets.c: patches by
   R. Larice from Feb. 8th, 2010

2010-02-07 Dietmar Warning
 * cpl/cplload.c, cplsetup.c, /txl/txlload.c, txlsetup.c, include/swec.h, multi_line.h,
   frontend/subckt.c, parser/inp2p.c, inppas2.c: no more float's, improve dc solution by 
   introducing gmin deembedding, better model check, automatic maxStep adaption in tran
   analysis, correct handling of kspice models in subckt's, kspice models are working now
   more stable but accuracy in steady state of transient is not sufficient 
 * examples/TransmissionLines/*.sp: ommit itl5-warning
 * tests/transmission/*.out: adapt reference files to new code behaviour, but this is still
   a mess

2010-02-07 Holger Vogt
 * inpcom.c: bug no. 2936702
 * vngspice.sln, vngspice.vcproj: add 64 bit support
 * measure.c, numpaif.h, numparam-h, spicenum.c, xpressn.c, subckt.c:
   Put original input deck line number into numparam error message. 

2010-01-30 Dietmar Warning
 * b3soiddld.c, b3soifdld.c, cplload.c, cplsetup.c, inpcom.c, measure.c, 
   mystring.c, spicenum.c, txlsetup.c: using a controlled_exit to see error 
   messages in some places and get better program termination
 * frontend/error.c, error.h: provide a simple controlled_exit function
 * misc/util.c, util.h: remove controlled_exit function

2010-01-29 Holger Vogt
 * commands.c: gnuplot need two args minimum
 * xpressn.c: more characters for real number insertion (up to 15)

2010-01-27 Dietmar Warning
 * cpl_ibm1.sp: fix the c matrix unsymmetry
 * swec.h: set maximum cpl lines to eight
 * inp2y.c, inp2p.c: parsing the length instance parameter in txl and cpl
 * subckt.c: devmodtranslation for txl and cpl in subckt's

2010-01-17 Dietmar Warning
 * examples/TransmissionLines: Hopefully more meaningful transmissionline examples
 * misc/util.c: provide a simple controlled_exit function