@@ -1,3 +1,6 @@
+2010-02-11 Holger Vogt
+ * terminal.h, cpextern.h: use format (__printf__, 1, 2)
+ 
 2010-02-08 Holger Vogt
  * com_sysinfo.c: 64 bit support enabled
  * terminal.c, terminal.h, cpextern.h, ngsconvert.c, inpgmod.c, ipcsockets.c: patches by
